--- a/Clash/config/ACL4SSR_Online_NoAuto.ini
+++ b/Clash/config/ACL4SSR_Online_NoAuto.ini
@@ -9,6 +9,8 @@
 ;增强中国IP段：不支持
 ;增强国外GFW：不支持
 
+ruleset=🇺🇸 US-Emby专用 0.01x,https://raw.githubusercontent.com/iLmessi/ACL4SSR/master/Clash/Emby.list
+ruleset=🇸🇬 Singapore 04,https://raw.githubusercontent.com/iLmessi/ACL4SSR/master/Clash/OpenAI.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
