--- a/Clash/config/ACL4SSR_Online_NoAuto.ini
+++ b/Clash/config/ACL4SSR_Online_NoAuto.ini
@@ -30,7 +30,7 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]⚖️ 负载均衡`.*
-custom_proxy_group=⚖️ 负载均衡`load-balance`(香港|Hong|新加坡|Singapore|Macao)`http://www.gstatic.com/generate_204`300,,100`strategy=round-robin
+custom_proxy_group=⚖️ 负载均衡`load-balance`(香港|Hong|新加坡|Singapore|Macao)`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🎯 全球直连`.*
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]🎯 全球直连`.*
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
