--- a/Clash/config/test.ini
+++ b/Clash/config/test.ini
@@ -99,24 +99,24 @@ rule-providers:
 
 # 设置规则引用
 rules:
-  - RULE-SET,US-Emby专用,🚀 节点选择
-  - RULE-SET,Singapore,🚀 节点选择
-  - RULE-SET,全球直连1,DIRECT
-  - RULE-SET,全球直连2,DIRECT
-  - RULE-SET,广告拦截,REJECT
-  - RULE-SET,应用净化,REJECT
-  - RULE-SET,谷歌FCM,DIRECT
-  - RULE-SET,全球直连3,DIRECT
-  - RULE-SET,全球直连4,DIRECT
-  - RULE-SET,微软服务,DIRECT
-  - RULE-SET,苹果服务,DIRECT
-  - RULE-SET,电报信息,🚀 节点选择
-  - RULE-SET,国外媒体,🚀 节点选择
+  - RULE-SET,Emby,🇺🇸 US-Emby专用 0.01x
+  - RULE-SET,OpenAI,🇸🇬 Singapore 03
+  - RULE-SET,LocalAreaNetwork,🎯 全球直连
+  - RULE-SET,UnBan,🎯 全球直连
+  - RULE-SET,BanAD,🛑 全球拦截
+  - RULE-SET,BanProgramAD,🛑 全球拦截
+  - RULE-SET,谷歌FCM,📢 谷歌FCM
+  - RULE-SET,GoogleCN,🎯 全球直连
+  - RULE-SET,SteamCN,🎯 全球直连
+  - RULE-SET,微软服务,Ⓜ️ 微软服务
+  - RULE-SET,苹果服务,🍎 苹果服务
+  - RULE-SET,电报信息,📲 电报信息
+  - RULE-SET,国外媒体,🌍 国外媒体
   - RULE-SET,节点选择,🚀 节点选择
-  - RULE-SET,全球直连5,DIRECT
-  - RULE-SET,全球直连6,DIRECT
-  - RULE-SET,GEOIP,CN,DIRECT
-  - RULE-SET,FINAL,🚀 节点选择
+  - RULE-SET,ChinaDomain,🎯 全球直连
+  - RULE-SET,ChinaCompanyIp,🎯 全球直连
+  - GEOIP,CN,🎯 全球直连
+  - MATCH,🐟 漏网之鱼
 
 # 保留原有的 custom_proxy_group 定义
 custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]⚖️ 负载均衡`.*
