--- a/Clash/config/test.ini
+++ b/Clash/config/test.ini
@@ -34,7 +34,7 @@ rule-providers:
     type: http
     behavior: classical
     url: "https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Providers/BanProgramAD.yaml"
-    path: ./rulesets/应用净化.yaml
+    path: ./rulesets/BanProgramAD.yaml
     interval: 86400
   谷歌FCM:
     type: http
