--- a/Clash/config/ACL4SSR_Online_Full_NoAuto.ini
+++ b/Clash/config/ACL4SSR_Online_Full_NoAuto.ini
@@ -10,8 +10,12 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
+ruleset=DIRECT,[]IP-CIDR,172.64.101.254
+ruleset=DIRECT,[]DOAMIN-SUFFIX,9521732.xyz
+ruleset=🇭🇰 0.1x 🇭🇰 香港14 PornEmby专用,[]DOMAIN,pemby.ednovas.org
+ruleset=DIRECT,[]DOAMIN,music.mefun.org
 ruleset=🇺🇸 US-Emby专用 0.01x,https://raw.githubusercontent.com/iLmessi/ACL4SSR/master/Clash/Emby.list
-ruleset=🇸🇬 Singapore 03,https://raw.githubusercontent.com/iLmessi/ACL4SSR/master/Clash/OpenAI.list
+ruleset=🇸🇬 狮城节点,https://raw.githubusercontent.com/iLmessi/ACL4SSR/master/Clash/OpenAI.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
@@ -50,8 +54,8 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`[]⚖️ 负载均衡`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=⚖️ 负载均衡`load-balance`(香港|Hong|新加坡|Singapore|Macao)`http://www.gstatic.com/generate_204`300,,100
-custom_proxy_group=🇸🇬 狮城负载`load-balance`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,100
+custom_proxy_group=⚖️ 负载均衡`load-balance`(香港|Hong|新加坡|Singapore)(?!.*PornEmby专用)`http://www.gstatic.com/generate_204`300,,100
+custom_proxy_group=🇸🇬 狮城负载`load-balance`(新加坡|坡|狮城|SG|Singapore)(?!.*0.1X 🇸🇬 新加坡6)`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=📲 电报消息`select`[]🇸🇬 狮城负载`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 ;custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
