--- a/Clash/config/ACL4SSR_Online_Full_NoAuto.ini
+++ b/Clash/config/ACL4SSR_Online_Full_NoAuto.ini
@@ -10,10 +10,10 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
-ruleset=DIRECT,[]IP-CIDR,172.64.101.254,no-resolve
-ruleset=DIRECT,[]DOAMIN-SUFFIX,9521732.xyz
+ruleset=DIRECT,[]IP-CIDR,172.64.101.254/32,no-resolve
+ruleset=DIRECT,[]DOMAIN-SUFFIX,9521732.xyz
 ruleset=🇭🇰 0.1x 🇭🇰 香港14 PornEmby专用,[]DOMAIN,pemby.ednovas.org
-ruleset=DIRECT,[]DOAMIN,music.mefun.org
+ruleset=DIRECT,[]DOMAIN,music.mefun.org
 ruleset=🇺🇸 US-Emby专用 0.01x,https://raw.githubusercontent.com/iLmessi/ACL4SSR/master/Clash/Emby.list
 ruleset=🇸🇬 狮城节点,https://raw.githubusercontent.com/iLmessi/ACL4SSR/master/Clash/OpenAI.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
